[package]
name = "clemenlib"
version = "0.1.0"
authors = ["Greg Cooper <gregory.cooper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "*", features = ["bundled"] }
time = "0.1"
serde_json = "1.0.41"
serde = { version = "1.0.41", features = ["derive"] }
regex = "1.3.1"
percent-encoding = "2.1.0"
